fixed new logo overflowing desktop

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ legend {
 }
 
 .logo {
-  max-width: 70vw;
+  max-width: 50vh;
 }
 
 .button {
